# MECT

./: .gitignore  CMakeLists.txt  LICENSE.rtf  README.md  installer.nsi
CMakeModules/: FindOpenCL.cmake
ImageSegmentation/: CMakeLists.txt
ImageSegmentation/FastAdaptiveMeanShift_2D/: CMakeLists.txt
ImageSegmentation/FastAdaptiveMeanShift_2D/src/: fams.cpp  fams.h
ImageSegmentation/graphCut3D/: CMakeLists.txt
ImageSegmentation/graphCut3D/Wrapping/: CMakeLists.txt  GraphCut3D.i
ImageSegmentation/graphCut3D/src/: GraphCut3D.cpp  GraphCut3D.hpp  main.cpp  main.hpp
Python/: .gitignore  setup.py
Python/src/: FAMStoHDF5.py  HDF5toFAMS.py  HDF5toMHD.py  HDF5toMatV7.py  MHDtoHDF5.py  MatV7toHDF5.py  MatV7toMHD.py  runSegmentation_SFAMS.py
Python/src/tools/: __init__.py  loadFAMSmodes.py  loadFAMSoutput.py
Utilities/: CMakeLists.txt
Utilities/common/Wrapping/: CMakeLists.txt  std_typedefs.i
Utilities/common/src/: std_typedefs.h
Utilities/graphs/Wrapping/: CMakeLists.txt  graphDisjointForest.i  graphEdge.i  graphVertex.i  numpy.i
Utilities/graphs/src/: graphDisjointForest.cpp  graphDisjointForest.hpp  graphEdge.cpp  graphEdge.hpp  graphVertex.cpp  graphVertex.hpp
Utilities/imaging/: CMakeLists.txt
Utilities/imaging/Wrapping/: CMakeLists.txt  image2D.i  image3D.i  image4D.i  mhdImage.i
Utilities/imaging/src/: image.cpp  image.hpp  image2D.cpp  image2D.hpp  image2D_utils.hpp  image3D.cpp  image3D.hpp  image3D_utils.hpp  image4D.cpp  image4D.hpp  image4D_utils.hpp  image_utils.hpp  imaging_commons.hpp  mhdImage.cpp  mhdImage.hpp
Utilities/io/Wrapping/: CMakeLists.txt  FAMS_ASCII.i  MHD.i  volumeFileInterface.i
Utilities/io/src/: FAMS_ASCII.cpp  FAMS_ASCII.hpp  MHD.cpp  MHD.hpp  io_commons.hpp
VolumeSegmentation/: CMakeLists.txt
VolumeSegmentation/FastAdaptiveMeanShift/: CMakeLists.txt  README.txt
VolumeSegmentation/FastAdaptiveMeanShift/src/: fams.cpp  fams.h
VolumeSegmentation/graphCut4D/: CMakeLists.txt
VolumeSegmentation/graphCut4D/Wrapping/: CMakeLists.txt  GraphCut4D.i
VolumeSegmentation/graphCut4D/src/: GraphCut4D.cpp  GraphCut4D.hpp  main.hpp  main_27.cpp  main_27w.cpp  main_7.cpp  main_ushort.cpp
