set(PROGRAM fams2D)
set( CMAKE_EXECUTABLE_SUFFIX ${CMAKE_EXECUTABLE_SUFFIX})
set( CMAKE_SHARED_LIBRARY_SUFFIX ${CMAKE_SHARED_LIBRARY_SUFFIX} )
set( CMAKE_STATIC_LIBRARY_SUFFIX ${CMAKE_STATIC_LIBRARY_SUFFIX} )
set( CMAKE_DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX} )
set( CMAKE_RELEASE_POSTFIX ${CMAKE_RELEASE_POSTFIX} )

set(HFILES
	${CMAKE_CURRENT_SOURCE_DIR}/src/fams.h 
	${ADDITIONAL_HEADERS}
)

set(SOURCES
	${CMAKE_CURRENT_SOURCE_DIR}/src/fams.cpp
	${ADDITIONAL_SOURCES}
)

include_directories(${INCLUDE_DIRS} ${CMAKE_INCLUDE_PATH})
link_directories(${fams2D_SOURCE_DIR} ${ADDITIONAL_LIBRARY_PATHS} ${CMAKE_BINARY_DIR})

#if(CUDA_FOUND)
#  if(CUDA_USE_CUDA_BUILD MATCHES ON)
#    message("CUDA FOUND")
#    list(APPEND SOURCES ${CUDA_SOURCES})
#    CUDA_ADD_LIBRARY(${LIB_NAME} ${SOURCES})
#  else(CUDA_USE_CUDA_BUILD MATCHES ON)
#    add_library(${LIB_NAME} ${SOURCES})
#  endif(CUDA_USE_CUDA_BUILD MATCHES ON)
#else(CUDA_FOUND)
#  add_library(${LIB_NAME} ${SOURCES})
#endif(CUDA_FOUND)
add_executable(${PROGRAM} ${SOURCES})
target_link_libraries(${PROGRAM} ${LIBRARIES})
#SETUP_LIBRARY(${LIB_NAME})

#install(FILES ${HFILES} DESTINATION include/CGEL)
#install (TARGETS MathFunctions DESTINATION bin)
install(TARGETS ${PROGRAM} RUNTIME DESTINATION bin)
#install(FILES ${KERNEL_O} DESTINATION lib)
#install(TARGETS ${LIB_NAME} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
#message(${CMAKE_BINARY_DIR})
#message(${CMAKE_INSTALL_PREFIX})
